fixes #488 cutting off at the bottom

--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -10,21 +10,27 @@ body{
    display: flex;
    -webkit-flex-direction: row; /* works with row or column */
    flex-direction: row;
+   -webkit-flex: 1 0 0;
+   flex: 1 0 0;
 }
 
 .titlebar{
+	-webkit-flex: 0 0 34px;
 	flex: 0 0 34px;
 }
 
 .nav{
+	-webkit-flex: 0 0 34px;
 	flex: 0 0 34px;
 }
 
 #block_menu{
+	-webkit-flex: 0 0 300px;
 	flex: 0 0 300px;
 }
 
 .workspace{
+	-webkit-flex: 1 0 0;
 	flex: 1 0 0;
 	display: -webkit-flex;
 	display: flex;
@@ -33,21 +39,25 @@ body{
 }
 
 .tutorial{
+	-webkit-flex: 1 1 auto;
 	flex: 1 1 auto;
 	background-color: #7fdbff;
 }
 
 .scratchpad{
+	-webkit-flex: 1 1 auto;
 	flex: 1 1 auto;
 	background-color: #3d9970;
 }
 
 .scripts_workspace{
+	-webkit-flex: 3 0 auto;
 	flex: 3 0 auto;
 	overflow: auto;
 }
 
 .results{
+	-webkit-flex: 0 0 400px;
 	flex: 0 0 400px;
 	display: -webkit-flex;
 	display: flex;
@@ -56,6 +66,7 @@ body{
 }
 
 .stage{
+	-webkit-flex: 1 0 0;
 	flex: 1 0 0;
 }
 
@@ -65,12 +76,12 @@ body{
 }
 
 .scripts_text_view{
+	-webkit-flex: 1 0 0;
 	flex: 1 0 0;
 	overflow: auto;
 }
 
 #block_menu, .workspace, .results, .files{
-	height: 100%;
 	overflow: auto;
 }
 
@@ -80,6 +91,7 @@ body{
 		display: none;
 	}
 	.mobilenav{
+		-webkit-flex: 0 0 30px;
 		flex: 0 0 30px;
 		display: -webkit-flex;
 		display: flex;
@@ -88,6 +100,7 @@ body{
 		order: 4;
 	}
 	.mobilenav button{
+		-webkit-flex: 1 0 auto;
 		flex: 1 0 auto;
 		background-color: #FFF;
 		color: #111111;
@@ -106,6 +119,7 @@ body{
 		display: block;
 		position: absolute;
 		width: 100%;
+		height: 100%;
 		top: 0;
 		left: 100%;
 		transition-property: left;
