--- a/stylesheets/workspace.css
+++ b/stylesheets/workspace.css
@@ -36,9 +36,9 @@ input{
 
 .content{
 	position: relative;
-	width: 100%;
+/*	width: 100%;
 	height: 100%;
-	/*display: none;*/
+*/	/*display: none;*/
 }
 
 /*body.editor .editor, body.blocks .editor{
